[Table] Fix dark mode

--- a/src/theme/base/util/scroll.scss
+++ b/src/theme/base/util/scroll.scss
@@ -1,11 +1,11 @@
-.scroll-x {
+.bk-scroll-x {
     overflow-x: auto;
 }
 
-.scroll-y {
+.bk-scroll-y {
     overflow-y: auto;
 }
 
-.scroll {
+.bk-scroll {
     overflow: auto;
 }
