--- a/src/theme/dark-mode.scss
+++ b/src/theme/dark-mode.scss
@@ -42,23 +42,28 @@
         --border-color-extra-light: hsl(220, 3%, 15%);
 
         tbody tr {
+            &:not(hover) {
+                &.is-warning,
+                &.is-danger,
+                &.is-info,
+                &.is-success {
+                    color: $--color-white;
+                }
+            }
+
             &.is-warning {
-                color: $--color-white;
                 background-color: $--color-warning-darker;
             }
 
             &.is-success {
-                color: $--color-white;
                 background-color: $--color-success-darker;
             }
 
             &.is-info {
-                color: $--color-white;
                 background-color: $--color-info-darker;
             }
 
             &.is-danger {
-                color: $--color-white;
                 background-color: $--color-danger-darker;
             }
         }
